Fix mobile overflow

--- a/main.css
+++ b/main.css
@@ -104,34 +104,3 @@ button {
     font-size: var(--size-title-s)
   }
 }
-
-/*
-html, body {
-    height: 100%;
-} */
-
-/* body {
-    line-height: 1.5;
-    -webkit-font-smoothing: antialiased;
-    background-color: var(--color-background);
-} */
-
-/* img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
-} */
-
-/* input, button, textarea, select {
-    font: inherit;
-} */
-
-/*
-#root, #__next {
-    isolation: isolate;
-}
-
-a {
-    color: #fff;
-    text-decoration: none;
-}
-*/
